powerdns/authorative.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: powerdns-authorative-nameserver
  labels:
    app.kubernetes.io/name: authorative-nameserver
    app.kubernetes.io/part-of: powerdns
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: authorative-nameserver
      app.kubernetes.io/part-of: powerdns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authorative-nameserver
        app.kubernetes.io/part-of: powerdns
    spec:
      containers:
      - name: powerdns-authorative
        image: powerdns/pdns-auth-50:5.0.7
        livenessProbe:
          exec:
            command:
              - pdns_control
              - --config-dir=/etc/powerdns/
              - rping
          initialDelaySeconds: 10
          periodSeconds: 20
        readinessProbe:
          exec:
            command:
              - pdns_control
              - --config-dir=/etc/powerdns/
              - rping
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
          - name: config
            mountPath: /etc/powerdns/pdns.conf
            subPath: pdns.conf
          - name: records
            mountPath: /etc/powerdns/zones
        ports:
          - containerPort: 53
            protocol: UDP
          - containerPort: 53
            protocol: TCP
          - containerPort: 8081
            protocol: TCP
      volumes:
      - name: config
        configMap:
          name: powerdns-authorative-config
      - name: records
        configMap:
          name: dns-records
---
apiVersion: v1
kind: Service
metadata:
  name: powerdns-authorative-nameserver
spec:
  selector:
    app.kubernetes.io/name: authorative-nameserver
    app.kubernetes.io/part-of: powerdns
  ports:
    - protocol: UDP
      port: 53
      targetPort: 53
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: powerdns-authorative-nameserver-web
spec:
  selector:
    app.kubernetes.io/name: authorative-nameserver
    app.kubernetes.io/part-of: powerdns
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
