powerdns/recursor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: powerdns-recursive-nameserver
  labels:
    app.kubernetes.io/name: recursive-nameserver
    app.kubernetes.io/part-of: powerdns
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: recursive-nameserver
      app.kubernetes.io/part-of: powerdns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: recursive-nameserver
        app.kubernetes.io/part-of: powerdns
    spec:
      containers:
      - name: recursor
        image: powerdns/pdns-recursor-50:5.0.12
        livenessProbe:
          exec:
            command:
              - rec_control
              - ping
          initialDelaySeconds: 10
          periodSeconds: 20
        readinessProbe:
          exec:
            command:
              - rec_control
              - ping
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1536Mi"
        ports:
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 8082
          name: webserver
        volumeMounts:
        - name: config
          mountPath: /etc/powerdns/recursor.yml
          subPath: recursor.yml
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 8082
        #   initialDelaySeconds: 10
        #   periodSeconds: 20
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 8082
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
      volumes:
      - name: config
        configMap:
          name: powerdns-recursor-config
---
apiVersion: v1
kind: Service
metadata:
  name: powerdns-recursive-nameserver
spec:
  selector:
    app.kubernetes.io/name: recursive-nameserver
    app.kubernetes.io/part-of: powerdns
  ports:
    - protocol: UDP
      port: 53
      targetPort: 53
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: powerdns-recursive-nameserver-web
spec:
  selector:
    app.kubernetes.io/name: recursive-nameserver
    app.kubernetes.io/part-of: powerdns
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
