powerdns/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authorative-route
spec:
  parentRefs:
  - name: homelab-gateway
    sectionName: https
    namespace: gateway
  
  hostnames:
  - "dns.nauvis.lan" 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /authorative
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: powerdns-authorative-nameserver-web
      port: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: recursor-route
spec:
  parentRefs:
  - name: homelab-gateway
    sectionName: https
    namespace: gateway
  hostnames:
  - "recursor.nauvis.lan" 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: powerdns-recursive-nameserver-web
      port: 8082
